config/_ytt_lib/github.com/cloudfoundry/cf-k8s-logging/config/manifests/500-log-cache-deployment.yaml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-cache
  namespace: #@ data.values.system_namespace
  labels:
    app: log-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-cache
  template:
    metadata:
      labels:
        app: log-cache
    spec:
      containers:
      - name: cf-auth-proxy
        image: logcache/cf-auth-proxy
        ports:
          - containerPort: 8083
        volumeMounts:
        - mountPath: /ca
          name: ca
          readOnly: true
        - mountPath: /external-certs
          name: external-certs
          readOnly: true
        - mountPath: /metrics-certs
          name: metrics-certs
          readOnly: true
        - mountPath: /system-ca
          name: system-ca
          readOnly: true
      - name: syslog-server
        image: #@ data.values.images.syslog_server
        ports:
        - containerPort: 8082
        volumeMounts:
        - mountPath: /ca
          name: ca
          readOnly: true
        - mountPath: /log-cache-certs
          name: log-cache-certs
          readOnly: true
        - mountPath: /syslog-server-certs
          name: syslog-server-certs
          readOnly: true
        - mountPath: /metrics-certs
          name: metrics-certs
          readOnly: true
      - name: log-cache
        image: #@ data.values.images.log_cache
        volumeMounts:
        - mountPath: /ca
          name: ca
          readOnly: true
        - mountPath: /log-cache-certs
          name: log-cache-certs
          readOnly: true
        - mountPath: /metrics-certs
          name: metrics-certs
          readOnly: true
      - name: gateway
        image: #@ data.values.images.log_cache_gateway
        ports:
        - containerPort: 8081
        volumeMounts:
        - mountPath: /ca
          name: ca
          readOnly: true
        - mountPath: /log-cache-certs
          name: log-cache-certs
          readOnly: true
        - mountPath: /gateway-certs
          name: gateway-certs
          readOnly: true
        - mountPath: /metrics-certs
          name: metrics-certs
          readOnly: true
      volumes:
      - name: ca
        secret:
          secretName: log-cache-ca
      - name: log-cache-certs
        secret:
          secretName: log-cache
      - name: syslog-server-certs
        secret:
          secretName: log-cache-syslog
      - name: gateway-certs
        secret:
          secretName: log-cache-gateway
      - name: metrics-certs
        secret:
          secretName: log-cache-metrics
      - name: system-ca
        secret:
          secretName: system-ca
      - name: external-certs
        secret:
          secretName: log-cache-external-certs
